--- a/WebExample/ProjectExample/ProjectExample.Services/ProjectExample.Service.csproj
+++ b/WebExample/ProjectExample/ProjectExample.Services/ProjectExample.Service.csproj
@@ -45,9 +45,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ProjectExample.Model.Common\ProjectExample.Model.Common.csproj">
+      <Project>{eaf3c6b6-7043-47aa-85dc-5f05cd7341b9}</Project>
+      <Name>ProjectExample.Model.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ProjectExample.Model\ProjectExample.Model.csproj">
       <Project>{f93dab7b-5d18-42d4-b0a3-3d90c3af2e4a}</Project>
       <Name>ProjectExample.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ProjectExample.Repository.Common\ProjectExample.Repository.Common.csproj">
+      <Project>{9673630b-de3e-400f-bf2b-a69e726f791d}</Project>
+      <Name>ProjectExample.Repository.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\ProjectExample.Repository\ProjectExample.Repository.csproj">
       <Project>{44464d22-3cb2-429d-90d3-99460325e66f}</Project>
@@ -57,6 +65,9 @@
       <Project>{6ce46dba-3074-4933-9974-abc0cb3fa8c7}</Project>
       <Name>ProjectExample.Service.Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
