--- a/WebExample/ProjectExample/ProjectExample.Webapi/ProjectExample.Webapi.csproj
+++ b/WebExample/ProjectExample/ProjectExample.Webapi/ProjectExample.Webapi.csproj
@@ -43,11 +43,33 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=5.2.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.5.2.0\lib\net461\Autofac.dll</HintPath>
+    </Reference>
+    <Reference Include="Autofac.Extensions.DependencyInjection, Version=6.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.Extensions.DependencyInjection.6.0.0\lib\netstandard2.0\Autofac.Extensions.DependencyInjection.dll</HintPath>
+    </Reference>
+    <Reference Include="Autofac.Integration.WebApi, Version=5.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.WebApi2.5.0.0\lib\net461\Autofac.Integration.WebApi.dll</HintPath>
+    </Reference>
     <Reference Include="AutoMapper, Version=10.0.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <HintPath>..\packages\AutoMapper.10.0.0\lib\net461\AutoMapper.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.1.1.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions, Version=2.1.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Extensions.DependencyInjection.Abstractions.2.1.0\lib\netstandard2.0\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.2\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.2\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -106,13 +128,37 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ExampleProject.Utility\ProjectExample.Utility.csproj">
+      <Project>{aec2d040-cb7c-4b0f-ab65-6b2f9ff8ff84}</Project>
+      <Name>ProjectExample.Utility</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ProjectExample.Model.Common\ProjectExample.Model.Common.csproj">
+      <Project>{eaf3c6b6-7043-47aa-85dc-5f05cd7341b9}</Project>
+      <Name>ProjectExample.Model.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ProjectExample.Model\ProjectExample.Model.csproj">
       <Project>{f93dab7b-5d18-42d4-b0a3-3d90c3af2e4a}</Project>
       <Name>ProjectExample.Model</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ProjectExample.Repository.Common\ProjectExample.Repository.Common.csproj">
+      <Project>{9673630b-de3e-400f-bf2b-a69e726f791d}</Project>
+      <Name>ProjectExample.Repository.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ProjectExample.Repository\ProjectExample.Repository.csproj">
+      <Project>{44464d22-3cb2-429d-90d3-99460325e66f}</Project>
+      <Name>ProjectExample.Repository</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ProjectExample.Services.Common\ProjectExample.Service.Common.csproj">
+      <Project>{6ce46dba-3074-4933-9974-abc0cb3fa8c7}</Project>
+      <Name>ProjectExample.Service.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ProjectExample.Services\ProjectExample.Service.csproj">
       <Project>{c162d9c5-a281-437e-90d3-d1a5c848e631}</Project>
       <Name>ProjectExample.Service</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ProjectExample.Utility.Common\ExampleProject.Utility.Common.csproj">
+      <Project>{6151d8c8-45ae-4edb-ad99-e02b135ab50b}</Project>
+      <Name>ExampleProject.Utility.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
